# PREFACE

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  PREFACE.R  README.md  pyproject.toml
.github/scripts/: ci_checks.py
.github/workflows/: docker-publish.yml  pr-checks.yml  pypi-publish.yml
paper/: C002703A_2025_matthdsm.tex  PREFACE.bib  bioinfo.cls  plainnat_limited.bst
paper/supplementary_data/tables/: summary_metrics.csv
src/preface/: __init__.py  predict.py  preface.py  train.py
src/preface/lib/: ensemble.py  export_onnx.py  functions.py  impute.py  neural.py  plot.py  schemas.py  svm.py  xgboost.py
src/preface/utils/: ffy.py  npz_to_parquet.py
test_data/: samplesheet.tsv  summarize_metrics.py  summary_metrics.csv  test_all.sh
test_data/output/: summary_metrics.csv
test_data/output/neural_knn/: training_split_metrics.csv
test_data/output/neural_mean/: training_split_metrics.csv  training_statistics.txt
test_data/output/neural_median/: training_split_metrics.csv  training_statistics.txt
test_data/output/neural_zero/: training_split_metrics.csv  training_statistics.txt
test_data/output/svm_mean/: training_split_metrics.csv  training_statistics.txt
test_data/output/svm_median/: training_split_metrics.csv  training_statistics.txt
test_data/output/svm_zero/: training_split_metrics.csv  training_statistics.txt
test_data/output/xgboost_knn/: training_split_metrics.csv
test_data/output/xgboost_mean/: training_split_metrics.csv  training_statistics.txt
test_data/output/xgboost_median/: training_split_metrics.csv  training_statistics.txt
test_data/output/xgboost_zero/: training_split_metrics.csv  training_statistics.txt
tests/: test_export_onnx.py  test_functions.py  test_impute.py  test_impute_export.py  test_neural.py  test_neural_export.py  test_plot.py  test_svm.py  test_svm_export.py  test_xgboost.py  test_xgboost_export.py
