[project]
name = "PREFACE"
dynamic = ["version"]
description = "PREFACE - PREdict FetAl ComponEnt"
readme = "README.md"
authors = [
  { name = "Matthias De Smet", email = "matthias.desmet@ugent.be" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.3.3,<3",
    "numpy>=2.3.5,<3",
    "scikit-learn==1.8.0",
    "tensorflow>=2.20.0,<3",
    "matplotlib>=3.10.8,<4",
    "statsmodels>=0.14.6,<0.15",
    "typer>=0.20.0,<0.21",
    "rich>=13.0.0,<15",
    "xgboost>=3.1.2,<4",
    "optuna>=4.6.0,<5",
    "optuna-integration[tfkeras]>=4.6.0,<5",
    "plotly>=6.5.0,<7",
    "kaleido>=1.2.0,<2",
    "onnx>=1.20.0,<2",
    "onnxmltools>=1.14.0,<2",
    "skl2onnx>=1.19.1,<2",
    "onnxconverter-common>=1.16.0,<2",
    "onnxruntime>=1.23.2,<2",
    "tf2onnx>=1.8.4,<2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
PREFACE = "preface.preface:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "preface.__version__"}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64","linux-64","linux-aarch64"]

[tool.pixi.pypi-dependencies]
PREFACE = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pylint = ">=4.0.4,<5"
