[project]
name = "PREFACE"
dynamic = ["version"]
description = "PREFACE - PREdict FetAl ComponEnt"
readme = "README.md"
authors = [
  { name = "Matthias De Smet", email = "matthias.desmet@ugent.be" },
]
requires-python = ">=3.13,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "kaleido>=1.2.0,<2",
  "torch==2.9.1"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
PREFACE = "preface.preface:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "preface.__version__"}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64","linux-64","linux-aarch64"]

[tool.pixi.feature.dev.pypi-dependencies]
PREFACE = { path = ".", editable = true }

[tool.pixi.environments]
default = ["dev"]
prod = []

[tool.pixi.tasks]

[tool.pixi.dependencies]
onnx = "1.20.0.*"
onnxmltools = "1.14.0.*"
onnxruntime = "1.22.2.*"
optuna = "4.6.0.*"
pandas = "2.3.3.*"
plotly = "6.5.0.*"
python = "3.13.*"
rich = ">=14.2.0,<15"
scikit-learn = "1.8.0.*"
scipy = "1.16.3.*"
skl2onnx = "1.19.1.*"
statsmodels = "0.14.6.*"
typer = ">=0.21.0,<0.22"
matplotlib = ">=3.10.8,<4"
py-xgboost = "3.1.2.*"

